--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!--todo-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MC-rang</title>
+</head>
+<body>
+    <h1>Välkomen till MC-rang</h1>
+
+
+</body>
+</html>
