--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MC-rang</title>
+    <title>Fennessy</title>
     <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
@@ -11,8 +11,10 @@
 <div class="wrap">
 
     <header class="topbar">
-    <h1>Fennessy</h1>
-    <img src="img/Hennessy mörkt-up.jpg" alt="Bild av Fennessy">
+        <h1 id="head-text">Fennessy
+            <img id="logo" src="img/Hennessy mörkt-up.jpg" alt="Bild av Fennessy"> 
+        </h1>
+       
     </header>
 
     <nav class="nav-top">
@@ -23,15 +25,16 @@
         <a href="">försäljning</a>
     </nav>
 
-    <main>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius explicabo, laboriosam minima possimus quia tempore, magni pariatur nam, veniam voluptatum consequuntur similique doloribus delectus? Quam architecto animi voluptatum dolorum consequuntur ad quia ex sint. Suscipit aliquid optio animi atque ab, dolore delectus provident itaque corrupti beatae perspiciatis vero ipsum, architecto dolorum maiores est, rem unde. Est cum sit odio aliquam reiciendis aliquid provident ipsum maxime ullam enim suscipit ipsa voluptate corporis a, praesentium rerum repellendus in voluptas ab minus quod soluta, eius porro. Quam omnis, ipsa asperiores incidunt quas sed quo quisquam dignissimos odit laboriosam praesentium illum dicta, nisi consequuntur error aliquam ratione ipsum! Assumenda impedit nesciunt incidunt, aliquam atque expedita eligendi quos omnis dolorum ea? Eos quibusdam, excepturi reprehenderit expedita et laudantium, fugiat quo architecto facilis nobis sunt corporis! Magni praesentium, tenetur quibusdam cumque amet quod quasi ullam dignissimos, sequi, facere necessitatibus consectetur sapiente possimus qui harum voluptates rerum est. Veniam rem eligendi dolore deleniti, quo libero perspiciatis vitae tempora beatae velit unde aliquid autem quod dolores facere facilis quas quia ab fuga assumenda culpa nesciunt saepe molestiae laudantium! Animi dolorum molestias, voluptatem sequi quisquam ipsa perferendis dolorem facilis porro deleniti, earum veniam atque a dignissimos libero deserunt ad, facere iusto commodi. Vero exercitationem dolores delectus voluptate hic, dolorum impedit consequatur vitae quaerat recusandae commodi minima quia, deleniti quae maiores cum distinctio mollitia odio, amet doloribus officia ullam repellendus! Doloremque, quo quaerat tenetur sit vero voluptatem facere cum. Cum eum laboriosam vero est vel doloribus fugit dolores aliquam! </p>
+    <main class="home_main">
+        <p id="first_text" > Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius explicabo, laboriosam minima possimus quia tempore, magni pariatur nam, veniam voluptatum consequuntur similique doloribus delectus? Quam architecto animi voluptatum dolorum consequuntur ad quia ex sint. Suscipit aliquid optio animi atque ab, dolore delectus provident itaque corrupti beatae perspiciatis vero ipsum, architecto dolorum maiores est, rem unde. Est cum sit odio aliquam reiciendis aliquid provident ipsum maxime ullam enim suscipit ipsa voluptate corporis a, praesentium rerum repellendus in voluptas ab minus quod soluta, eius porro. Quam omnis, ipsa asperiores incidunt quas sed quo quisquam dignissimos odit laboriosam praesentium illum dicta, nisi consequuntur error aliquam ratione ipsum! Assumenda impedit nesciunt incidunt, aliquam atque expedita eligendi quos omnis dolorum ea? Eos quibusdam, excepturi reprehenderit expedita et laudantium, fugiat quo architecto facilis nobis sunt corporis! Magni praesentium, tenetur quibusdam cumque amet quod quasi ullam dignissimos, sequi, facere necessitatibus consectetur sapiente possimus qui harum voluptates rerum est. Veniam rem eligendi dolore deleniti, quo libero perspiciatis vitae tempora beatae velit unde aliquid autem quod dolores facere facilis quas quia ab fuga assumenda culpa nesciunt saepe molestiae laudantium! Animi dolorum molestias, voluptatem sequi quisquam ipsa perferendis dolorem facilis porro deleniti, earum veniam atque a dignissimos libero deserunt ad, facere iusto commodi. Vero exercitationem dolores delectus voluptate hic, dolorum impedit consequatur vitae quaerat recusandae commodi minima quia, deleniti quae maiores cum distinctio mollitia odio, amet doloribus officia ullam repellendus! Doloremque, quo quaerat tenetur sit vero voluptatem facere cum. Cum eum laboriosam vero est vel doloribus fugit dolores aliquam! </p>
 
     </main>
 
-    <aside>
+    <aside class="as-main">
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laborum, odit facere ratione architecto id ullam hic ad alias debitis omnis earum neque recusandae, natus perferendis. Id temporibus qui ducimus. </p>
     </aside>
 
 </div>
+
 </body>
 </html>
