--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 <div class="wrap">
 
     <header class="topbar">
-        <h1 id="head-text">Fennessy
-            <img id="logo" src="img/Hennessy mörkt-up.jpg" alt="Bild av Fennessy"> 
-        </h1>
+        <h1 id="head-text">Fennessy</h1>
+         <img id="logo" src="img/Hennessy mörkt-up.jpg" alt="Bild av Fennessy"> 
        
     </header>
 
