--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <nav class="nav-top">
         <ul>
-            <a href="">Om oss</a>
-            <a href="">Hitta oss</a>
-            <a href="">Smaker</a>
-            <a href="">försäljning</a>
+            <li><a href="">Om oss</a></li>
+            <li><a href="">Hitta oss</a></li>
+            <li><a href="">Smaker</a></li>
+            <li><a href="">försäljning</a></li>
         </ul>
     </nav>
 
