--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <div class="wrap">
 
     <header class="topbar">
-        <h1 id="head-text">Fennessy</h1>
+        <h1 id="fennessy-text">Fennessy</h1>
          <img id="logo" src="img/Hennessy mörkt-up.jpg" alt="Bild av Fennessy"> 
        
     </header>
 
-    <nav class="nav-top">
+    <nav class="nav-link">
         <ul>
             <li><a href="">Om oss</a></li>
             <li><a href="">Hitta oss</a></li>
@@ -25,11 +25,11 @@
         </ul>
     </nav>
 
-    <main class="home_main">
+    <main class="main-text">
         <p id="first_text" > Fennessy är lite Lorem ipsum dolor </p>
     </main>
 
-    <aside class="as-main">
+    <aside class="main-as">
         <p> Maten är lite Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laborum, odit facere ratione architecto id ullam hic ad alias debitis omnis earum neque recusandae, natus perferendis. Id temporibus qui ducimus. </p>
     </aside>
 
