--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="topbar">
         <h1 id="fennessy-text">Fennessy</h1>
-         <img id="logo" src="img/Hennessy mörkt-up.jpg" alt="Bild av Fennessy"> 
+         <img id="logo" src="img/Fennessy.png" alt="Bild av Fennessy"> 
        
     </header>
 
@@ -26,6 +26,8 @@
     </nav>
 
     <main class="main-text">
+        <h2>Fennessy är ett premium congac som grundaste</h2>
+        <img src="img/Hennessy_XO_colsest.jpg" alt="En när bild på Fennessy">
         <p id="first_text" > Fennessy är lite Lorem ipsum dolor </p>
     </main>
 
