--- a/index.html
+++ b/index.html
@@ -26,13 +26,23 @@
     </nav>
 
     <main class="main-text">
-        <h2>Fennessy är ett premium congac som grundaste</h2>
+        <h2>Fennessy är ett premium congac</h2>
         <img src="img/Hennessy_XO_colsest.jpg" alt="En när bild på Fennessy">
         <p id="first_text" > Fennessy är lite Lorem ipsum dolor </p>
     </main>
 
     <aside class="main-as">
-        <p> Maten är lite Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laborum, odit facere ratione architecto id ullam hic ad alias debitis omnis earum neque recusandae, natus perferendis. Id temporibus qui ducimus. </p>
+        <p>
+         Maten är lite Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laborum, odit facere ratione architecto id ullam hic ad alias debitis omnis earum neque recusandae, natus perferendis. Id temporibus qui ducimus. 
+        </p>
+
+        <p>
+        Sedan så är detta lite Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid harum tenetur expedita nihil laudantium dolores veritatis id amet dolorem? Aliquam dolor maiores doloribus enim veritatis temporibus quo ullam excepturi repellat aperiam deleniti architecto, recusandae nesciunt? Harum, suscipit laboriosam sequi, repudiandae iure inventore vero nam officia saepe dignissimos repellat magnam sed quo quam doloremque libero minima! At tempore odio, dolorem a commodi blanditiis suscipit delectus eos, modi qui ad reprehenderit. Illum voluptas quasi cupiditate ea deserunt.
+        </p>
+
+        <p>
+            Till sist så är detta mycket Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores quos quod animi accusamus, numquam quas, eius architecto corrupti, laudantium at quo reprehenderit ratione doloremque. Mollitia, numquam quisquam! Sapiente ipsum quia id iusto odio eaque asperiores, aliquam placeat suscipit, totam numquam eius ipsa. Laboriosam autem voluptatum, adipisci eum aut dolorum, excepturi reprehenderit iste, molestiae ipsam dignissimos minima animi atque a quos consequuntur quis repudiandae ex voluptas aperiam repellat culpa! Velit deserunt, itaque fuga nihil totam vel dolor voluptatum nulla tempore et molestias blanditiis non dolorum, eum mollitia optio similique ullam officia pariatur cupiditate. Consectetur soluta rem hic atque facilis iste perferendis, quae maxime alias, ratione necessitatibus eos laboriosam nam in nesciunt est facere delectus consequuntur! Optio repellat qui sequi laudantium quisquam dolores obcaecati! Delectus labore ut enim earum obcaecati accusantium, cum, alias porro debitis iure odit dolores perferendis sapiente sunt deleniti adipisci voluptate quod laboriosam consectetur dolorem! Neque, eius sunt saepe ratione vitae quod officiis atque unde reprehenderit corrupti consequatur quos sequi expedita incidunt aperiam asperiores! Saepe vitae, ex, cum, eveniet ab dolores quos unde beatae dignissimos aliquid quaerat rem ducimus porro excepturi impedit. Repellat commodi inventore optio incidunt! Expedita qui dignissimos aliquid officia rerum commodi est unde quidem aut eum.
+        </p>
     </aside>
 
 </div>
