--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="wrap">
+<div class="wrap-index">
 
     <header class="topbar">
         <h1 id="fennessy-text">Fennessy</h1>
@@ -18,10 +18,10 @@
 
     <nav class="nav-link">
         <ul>
-            <li><a href="">Om oss</a></li>
-            <li><a href="">Hitta oss</a></li>
-            <li><a href="">Smaker</a></li>
-            <li><a href="">försäljning</a></li>
+            <li><a href="index.html">Hem</a></li>
+            <li><a href="hitta-oss.html">Hitta oss</a></li>
+            <li><a href="smaker.html">Smaker</a></li>
+            <li><a target="_blank" href="https://www.systembolaget.se/produkt/sprit/hennessy-vs-15601/">försäljning</a></li>
         </ul>
     </nav>
 
